[AIOTAL - 647] , added changes to fix users screen gaps

--- a/src/app/shared/profile/profile.component.scss
+++ b/src/app/shared/profile/profile.component.scss
@@ -33,7 +33,7 @@
 }
 .types1{
     color:gray;
-    width:10% !important;
+    width:15%;
 
 }
 .types2{
@@ -737,4 +737,22 @@ button.btn.btn-primary.invite-button {
     width: 60% !important;
     padding-left: 0px !important;
 }
-    
+    .typesss{
+        
+    color:gray;
+    width:20% !important;
+    }
+    .emailCs{
+        width: 100px !important;
+        word-wrap: break-word;
+    }
+    .roleCs{
+        width: 130px !important;
+
+    }
+    .edit-Btn{
+        float: left;
+    }
+    .action-btns{
+        width: 140px;
+    }
